# LivePlayer

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/cloud/atlasdemo/liveplayer/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: logutils.cpp  pushnative.cpp
app/src/main/java/com/example/cloud/atlasdemo/liveplayer/: MainActivity.java
app/src/main/java/com/example/cloud/atlasdemo/liveplayer/nativeinterf/: PushNative.java
app/src/main/java/com/example/cloud/atlasdemo/liveplayer/params/: AudioParam.java  VideoParam.java
app/src/main/java/com/example/cloud/atlasdemo/liveplayer/pusher/: AudioPusher.java  LivePusher.java  Pusher.java  VideoPusher.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/example/cloud/atlasdemo/liveplayer/: ExampleUnitTest.java
